# phi-ardrone

./: CMakeLists.txt  CMakeLists.txt~  Readme.txt  Readme.txt~  mainpage.dox  manifest.xml
QtProjects/: Makefile  phi_keyboard_pilot.pro~  phi_locate_circle.pro  phi_node_point_follower.pro  phi_node_redball_tracker.pro
include/phi_ardrone/: phi_follower.h  phi_locate_circle.h  phi_pilot.h
src/: phi_follower.cpp  phi_kb_pilot.cpp~  phi_keyboard_pilot.cpp~  phi_locate_circle.cpp  phi_node_keyboard_pilot.cpp  phi_node_locate_circle.cpp  phi_pilot.cpp  phi_pilot_class.cpp~
